[package]
name = "s3-multipart-streaming-upload"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"

futures-util = "0.3"

aws-config = { version = "1", features = ["rustls"] }
aws-sdk-s3 = { version = "1", features = ["rt-tokio"] }

reqwest = { version = "0.12", features = ["stream"] }
